Submission2/Examples/Working/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> VOID MAIN LPAREN RPAREN LFLOWER code RFLOWER
Rule 2     code -> line code
Rule 3     code -> line
Rule 4     line -> dec SEMI_COLON
Rule 5     line -> assgn COMMA
Rule 6     line -> assgn SEMI_COLON
Rule 7     line -> COMMENT
Rule 8     dec -> TYPE vars
Rule 9     vars -> NAME COMMA vars
Rule 10    vars -> pointer_other COMMA vars
Rule 11    vars -> NAME
Rule 12    vars -> pointer_other
Rule 13    assgn -> pointer EQUAL expression
Rule 14    assgn -> name EQUAL not_number_expression
Rule 15    name -> NAME
Rule 16    not_number_expression -> not_number_expression PLUS number_expression
Rule 17    not_number_expression -> not_number_expression MINUS number_expression
Rule 18    not_number_expression -> not_number_expression STAR number_expression
Rule 19    not_number_expression -> not_number_expression DIVIDE number_expression
Rule 20    not_number_expression -> number_expression PLUS not_number_expression
Rule 21    not_number_expression -> number_expression MINUS not_number_expression
Rule 22    not_number_expression -> number_expression STAR not_number_expression
Rule 23    not_number_expression -> number_expression DIVIDE not_number_expression
Rule 24    not_number_expression -> not_number_expression PLUS not_number_expression
Rule 25    not_number_expression -> not_number_expression MINUS not_number_expression
Rule 26    not_number_expression -> not_number_expression STAR not_number_expression
Rule 27    not_number_expression -> not_number_expression DIVIDE not_number_expression
Rule 28    not_number_expression -> NAME
Rule 29    not_number_expression -> and
Rule 30    not_number_expression -> pointer
Rule 31    not_number_expression -> LPAREN not_number_expression RPAREN
Rule 32    not_number_expression -> MINUS not_number_expression
Rule 33    number_expression -> number_expression PLUS number_expression
Rule 34    number_expression -> number_expression MINUS number_expression
Rule 35    number_expression -> number_expression STAR number_expression
Rule 36    number_expression -> number_expression DIVIDE number_expression
Rule 37    number_expression -> LPAREN number_expression RPAREN
Rule 38    number_expression -> MINUS number_expression
Rule 39    number_expression -> NUMBER
Rule 40    expression -> expression PLUS expression
Rule 41    expression -> expression MINUS expression
Rule 42    expression -> expression STAR expression
Rule 43    expression -> expression DIVIDE expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> MINUS expression
Rule 46    expression -> NUMBER
Rule 47    expression -> NAME
Rule 48    expression -> pointer
Rule 49    expression -> and
Rule 50    pointer -> STAR pointer
Rule 51    pointer -> STAR and
Rule 52    pointer -> STAR NAME
Rule 53    and -> AND and
Rule 54    and -> AND NAME
Rule 55    and -> AND pointer
Rule 56    pointer_other -> STAR pointer
Rule 57    pointer_other -> STAR NAME

Terminals, with rules where they appear

AND                  : 53 54 55
COMMA                : 5 9 10
COMMENT              : 7
DIVIDE               : 19 23 27 36 43
EQUAL                : 13 14
LFLOWER              : 1
LPAREN               : 1 31 37 44
MAIN                 : 1
MINUS                : 17 21 25 32 34 38 41 45
NAME                 : 9 11 15 28 47 52 54 57
NUMBER               : 39 46
PLUS                 : 16 20 24 33 40
RFLOWER              : 1
RPAREN               : 1 31 37 44
SEMI_COLON           : 4 6
STAR                 : 18 22 26 35 42 50 51 52 56 57
TYPE                 : 8
VOID                 : 1
error                : 

Nonterminals, with rules where they appear

and                  : 29 49 51 53
assgn                : 5 6
code                 : 1 2
dec                  : 4
expression           : 13 40 40 41 41 42 42 43 43 44 45
line                 : 2 3
name                 : 14
not_number_expression : 14 16 17 18 19 20 21 22 23 24 24 25 25 26 26 27 27 31 32
number_expression    : 16 17 18 19 20 21 22 23 33 33 34 34 35 35 36 36 37 38
pointer              : 13 30 48 50 55 56
pointer_other        : 10 12
program              : 0
vars                 : 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . VOID MAIN LPAREN RPAREN LFLOWER code RFLOWER

    VOID            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> VOID . MAIN LPAREN RPAREN LFLOWER code RFLOWER

    MAIN            shift and go to state 3


state 3

    (1) program -> VOID MAIN . LPAREN RPAREN LFLOWER code RFLOWER

    LPAREN          shift and go to state 4


state 4

    (1) program -> VOID MAIN LPAREN . RPAREN LFLOWER code RFLOWER

    RPAREN          shift and go to state 5


state 5

    (1) program -> VOID MAIN LPAREN RPAREN . LFLOWER code RFLOWER

    LFLOWER         shift and go to state 6


state 6

    (1) program -> VOID MAIN LPAREN RPAREN LFLOWER . code RFLOWER
    (2) code -> . line code
    (3) code -> . line
    (4) line -> . dec SEMI_COLON
    (5) line -> . assgn COMMA
    (6) line -> . assgn SEMI_COLON
    (7) line -> . COMMENT
    (8) dec -> . TYPE vars
    (13) assgn -> . pointer EQUAL expression
    (14) assgn -> . name EQUAL not_number_expression
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME
    (15) name -> . NAME

    COMMENT         shift and go to state 15
    TYPE            shift and go to state 8
    STAR            shift and go to state 9
    NAME            shift and go to state 10

    pointer                        shift and go to state 12
    name                           shift and go to state 14
    dec                            shift and go to state 16
    line                           shift and go to state 11
    code                           shift and go to state 7
    assgn                          shift and go to state 13

state 7

    (1) program -> VOID MAIN LPAREN RPAREN LFLOWER code . RFLOWER

    RFLOWER         shift and go to state 17


state 8

    (8) dec -> TYPE . vars
    (9) vars -> . NAME COMMA vars
    (10) vars -> . pointer_other COMMA vars
    (11) vars -> . NAME
    (12) vars -> . pointer_other
    (56) pointer_other -> . STAR pointer
    (57) pointer_other -> . STAR NAME

    NAME            shift and go to state 19
    STAR            shift and go to state 18

    vars                           shift and go to state 20
    pointer_other                  shift and go to state 21

state 9

    (50) pointer -> STAR . pointer
    (51) pointer -> STAR . and
    (52) pointer -> STAR . NAME
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME
    (53) and -> . AND and
    (54) and -> . AND NAME
    (55) and -> . AND pointer

    NAME            shift and go to state 25
    STAR            shift and go to state 9
    AND             shift and go to state 23

    pointer                        shift and go to state 22
    and                            shift and go to state 24

state 10

    (15) name -> NAME .

    EQUAL           reduce using rule 15 (name -> NAME .)


state 11

    (2) code -> line . code
    (3) code -> line .
    (2) code -> . line code
    (3) code -> . line
    (4) line -> . dec SEMI_COLON
    (5) line -> . assgn COMMA
    (6) line -> . assgn SEMI_COLON
    (7) line -> . COMMENT
    (8) dec -> . TYPE vars
    (13) assgn -> . pointer EQUAL expression
    (14) assgn -> . name EQUAL not_number_expression
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME
    (15) name -> . NAME

    RFLOWER         reduce using rule 3 (code -> line .)
    COMMENT         shift and go to state 15
    TYPE            shift and go to state 8
    STAR            shift and go to state 9
    NAME            shift and go to state 10

    pointer                        shift and go to state 12
    name                           shift and go to state 14
    dec                            shift and go to state 16
    line                           shift and go to state 11
    code                           shift and go to state 26
    assgn                          shift and go to state 13

state 12

    (13) assgn -> pointer . EQUAL expression

    EQUAL           shift and go to state 27


state 13

    (5) line -> assgn . COMMA
    (6) line -> assgn . SEMI_COLON

    COMMA           shift and go to state 28
    SEMI_COLON      shift and go to state 29


state 14

    (14) assgn -> name . EQUAL not_number_expression

    EQUAL           shift and go to state 30


state 15

    (7) line -> COMMENT .

    COMMENT         reduce using rule 7 (line -> COMMENT .)
    TYPE            reduce using rule 7 (line -> COMMENT .)
    STAR            reduce using rule 7 (line -> COMMENT .)
    NAME            reduce using rule 7 (line -> COMMENT .)
    RFLOWER         reduce using rule 7 (line -> COMMENT .)


state 16

    (4) line -> dec . SEMI_COLON

    SEMI_COLON      shift and go to state 31


state 17

    (1) program -> VOID MAIN LPAREN RPAREN LFLOWER code RFLOWER .

    $end            reduce using rule 1 (program -> VOID MAIN LPAREN RPAREN LFLOWER code RFLOWER .)


state 18

    (56) pointer_other -> STAR . pointer
    (57) pointer_other -> STAR . NAME
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME

    NAME            shift and go to state 33
    STAR            shift and go to state 9

    pointer                        shift and go to state 32

state 19

    (9) vars -> NAME . COMMA vars
    (11) vars -> NAME .

    COMMA           shift and go to state 34
    SEMI_COLON      reduce using rule 11 (vars -> NAME .)


state 20

    (8) dec -> TYPE vars .

    SEMI_COLON      reduce using rule 8 (dec -> TYPE vars .)


state 21

    (10) vars -> pointer_other . COMMA vars
    (12) vars -> pointer_other .

    COMMA           shift and go to state 35
    SEMI_COLON      reduce using rule 12 (vars -> pointer_other .)


state 22

    (50) pointer -> STAR pointer .

    PLUS            reduce using rule 50 (pointer -> STAR pointer .)
    MINUS           reduce using rule 50 (pointer -> STAR pointer .)
    STAR            reduce using rule 50 (pointer -> STAR pointer .)
    DIVIDE          reduce using rule 50 (pointer -> STAR pointer .)
    COMMA           reduce using rule 50 (pointer -> STAR pointer .)
    SEMI_COLON      reduce using rule 50 (pointer -> STAR pointer .)
    RPAREN          reduce using rule 50 (pointer -> STAR pointer .)
    EQUAL           reduce using rule 50 (pointer -> STAR pointer .)


state 23

    (53) and -> AND . and
    (54) and -> AND . NAME
    (55) and -> AND . pointer
    (53) and -> . AND and
    (54) and -> . AND NAME
    (55) and -> . AND pointer
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME

    NAME            shift and go to state 38
    AND             shift and go to state 23
    STAR            shift and go to state 9

    pointer                        shift and go to state 36
    and                            shift and go to state 37

state 24

    (51) pointer -> STAR and .

    PLUS            reduce using rule 51 (pointer -> STAR and .)
    MINUS           reduce using rule 51 (pointer -> STAR and .)
    STAR            reduce using rule 51 (pointer -> STAR and .)
    DIVIDE          reduce using rule 51 (pointer -> STAR and .)
    COMMA           reduce using rule 51 (pointer -> STAR and .)
    SEMI_COLON      reduce using rule 51 (pointer -> STAR and .)
    RPAREN          reduce using rule 51 (pointer -> STAR and .)
    EQUAL           reduce using rule 51 (pointer -> STAR and .)


state 25

    (52) pointer -> STAR NAME .

    PLUS            reduce using rule 52 (pointer -> STAR NAME .)
    MINUS           reduce using rule 52 (pointer -> STAR NAME .)
    STAR            reduce using rule 52 (pointer -> STAR NAME .)
    DIVIDE          reduce using rule 52 (pointer -> STAR NAME .)
    COMMA           reduce using rule 52 (pointer -> STAR NAME .)
    SEMI_COLON      reduce using rule 52 (pointer -> STAR NAME .)
    RPAREN          reduce using rule 52 (pointer -> STAR NAME .)
    EQUAL           reduce using rule 52 (pointer -> STAR NAME .)


state 26

    (2) code -> line code .

    RFLOWER         reduce using rule 2 (code -> line code .)


state 27

    (13) assgn -> pointer EQUAL . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression STAR expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . MINUS expression
    (46) expression -> . NUMBER
    (47) expression -> . NAME
    (48) expression -> . pointer
    (49) expression -> . and
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME
    (53) and -> . AND and
    (54) and -> . AND NAME
    (55) and -> . AND pointer

    LPAREN          shift and go to state 41
    MINUS           shift and go to state 42
    NUMBER          shift and go to state 40
    NAME            shift and go to state 43
    STAR            shift and go to state 9
    AND             shift and go to state 23

    pointer                        shift and go to state 44
    expression                     shift and go to state 39
    and                            shift and go to state 45

state 28

    (5) line -> assgn COMMA .

    COMMENT         reduce using rule 5 (line -> assgn COMMA .)
    TYPE            reduce using rule 5 (line -> assgn COMMA .)
    STAR            reduce using rule 5 (line -> assgn COMMA .)
    NAME            reduce using rule 5 (line -> assgn COMMA .)
    RFLOWER         reduce using rule 5 (line -> assgn COMMA .)


state 29

    (6) line -> assgn SEMI_COLON .

    COMMENT         reduce using rule 6 (line -> assgn SEMI_COLON .)
    TYPE            reduce using rule 6 (line -> assgn SEMI_COLON .)
    STAR            reduce using rule 6 (line -> assgn SEMI_COLON .)
    NAME            reduce using rule 6 (line -> assgn SEMI_COLON .)
    RFLOWER         reduce using rule 6 (line -> assgn SEMI_COLON .)


state 30

    (14) assgn -> name EQUAL . not_number_expression
    (16) not_number_expression -> . not_number_expression PLUS number_expression
    (17) not_number_expression -> . not_number_expression MINUS number_expression
    (18) not_number_expression -> . not_number_expression STAR number_expression
    (19) not_number_expression -> . not_number_expression DIVIDE number_expression
    (20) not_number_expression -> . number_expression PLUS not_number_expression
    (21) not_number_expression -> . number_expression MINUS not_number_expression
    (22) not_number_expression -> . number_expression STAR not_number_expression
    (23) not_number_expression -> . number_expression DIVIDE not_number_expression
    (24) not_number_expression -> . not_number_expression PLUS not_number_expression
    (25) not_number_expression -> . not_number_expression MINUS not_number_expression
    (26) not_number_expression -> . not_number_expression STAR not_number_expression
    (27) not_number_expression -> . not_number_expression DIVIDE not_number_expression
    (28) not_number_expression -> . NAME
    (29) not_number_expression -> . and
    (30) not_number_expression -> . pointer
    (31) not_number_expression -> . LPAREN not_number_expression RPAREN
    (32) not_number_expression -> . MINUS not_number_expression
    (33) number_expression -> . number_expression PLUS number_expression
    (34) number_expression -> . number_expression MINUS number_expression
    (35) number_expression -> . number_expression STAR number_expression
    (36) number_expression -> . number_expression DIVIDE number_expression
    (37) number_expression -> . LPAREN number_expression RPAREN
    (38) number_expression -> . MINUS number_expression
    (39) number_expression -> . NUMBER
    (53) and -> . AND and
    (54) and -> . AND NAME
    (55) and -> . AND pointer
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME

    NAME            shift and go to state 51
    LPAREN          shift and go to state 49
    MINUS           shift and go to state 50
    NUMBER          shift and go to state 48
    AND             shift and go to state 23
    STAR            shift and go to state 9

    pointer                        shift and go to state 52
    not_number_expression          shift and go to state 46
    and                            shift and go to state 53
    number_expression              shift and go to state 47

state 31

    (4) line -> dec SEMI_COLON .

    COMMENT         reduce using rule 4 (line -> dec SEMI_COLON .)
    TYPE            reduce using rule 4 (line -> dec SEMI_COLON .)
    STAR            reduce using rule 4 (line -> dec SEMI_COLON .)
    NAME            reduce using rule 4 (line -> dec SEMI_COLON .)
    RFLOWER         reduce using rule 4 (line -> dec SEMI_COLON .)


state 32

    (56) pointer_other -> STAR pointer .

    COMMA           reduce using rule 56 (pointer_other -> STAR pointer .)
    SEMI_COLON      reduce using rule 56 (pointer_other -> STAR pointer .)


state 33

    (57) pointer_other -> STAR NAME .

    COMMA           reduce using rule 57 (pointer_other -> STAR NAME .)
    SEMI_COLON      reduce using rule 57 (pointer_other -> STAR NAME .)


state 34

    (9) vars -> NAME COMMA . vars
    (9) vars -> . NAME COMMA vars
    (10) vars -> . pointer_other COMMA vars
    (11) vars -> . NAME
    (12) vars -> . pointer_other
    (56) pointer_other -> . STAR pointer
    (57) pointer_other -> . STAR NAME

    NAME            shift and go to state 19
    STAR            shift and go to state 18

    vars                           shift and go to state 54
    pointer_other                  shift and go to state 21

state 35

    (10) vars -> pointer_other COMMA . vars
    (9) vars -> . NAME COMMA vars
    (10) vars -> . pointer_other COMMA vars
    (11) vars -> . NAME
    (12) vars -> . pointer_other
    (56) pointer_other -> . STAR pointer
    (57) pointer_other -> . STAR NAME

    NAME            shift and go to state 19
    STAR            shift and go to state 18

    vars                           shift and go to state 55
    pointer_other                  shift and go to state 21

state 36

    (55) and -> AND pointer .

    RPAREN          reduce using rule 55 (and -> AND pointer .)
    PLUS            reduce using rule 55 (and -> AND pointer .)
    MINUS           reduce using rule 55 (and -> AND pointer .)
    STAR            reduce using rule 55 (and -> AND pointer .)
    DIVIDE          reduce using rule 55 (and -> AND pointer .)
    COMMA           reduce using rule 55 (and -> AND pointer .)
    SEMI_COLON      reduce using rule 55 (and -> AND pointer .)
    EQUAL           reduce using rule 55 (and -> AND pointer .)


state 37

    (53) and -> AND and .

    RPAREN          reduce using rule 53 (and -> AND and .)
    PLUS            reduce using rule 53 (and -> AND and .)
    MINUS           reduce using rule 53 (and -> AND and .)
    STAR            reduce using rule 53 (and -> AND and .)
    DIVIDE          reduce using rule 53 (and -> AND and .)
    COMMA           reduce using rule 53 (and -> AND and .)
    SEMI_COLON      reduce using rule 53 (and -> AND and .)
    EQUAL           reduce using rule 53 (and -> AND and .)


state 38

    (54) and -> AND NAME .

    RPAREN          reduce using rule 54 (and -> AND NAME .)
    PLUS            reduce using rule 54 (and -> AND NAME .)
    MINUS           reduce using rule 54 (and -> AND NAME .)
    STAR            reduce using rule 54 (and -> AND NAME .)
    DIVIDE          reduce using rule 54 (and -> AND NAME .)
    COMMA           reduce using rule 54 (and -> AND NAME .)
    SEMI_COLON      reduce using rule 54 (and -> AND NAME .)
    EQUAL           reduce using rule 54 (and -> AND NAME .)


state 39

    (13) assgn -> pointer EQUAL expression .
    (40) expression -> expression . PLUS expression
    (41) expression -> expression . MINUS expression
    (42) expression -> expression . STAR expression
    (43) expression -> expression . DIVIDE expression

    COMMA           reduce using rule 13 (assgn -> pointer EQUAL expression .)
    SEMI_COLON      reduce using rule 13 (assgn -> pointer EQUAL expression .)
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58
    STAR            shift and go to state 56
    DIVIDE          shift and go to state 59


state 40

    (46) expression -> NUMBER .

    PLUS            reduce using rule 46 (expression -> NUMBER .)
    MINUS           reduce using rule 46 (expression -> NUMBER .)
    STAR            reduce using rule 46 (expression -> NUMBER .)
    DIVIDE          reduce using rule 46 (expression -> NUMBER .)
    COMMA           reduce using rule 46 (expression -> NUMBER .)
    SEMI_COLON      reduce using rule 46 (expression -> NUMBER .)
    RPAREN          reduce using rule 46 (expression -> NUMBER .)


state 41

    (44) expression -> LPAREN . expression RPAREN
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression STAR expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . MINUS expression
    (46) expression -> . NUMBER
    (47) expression -> . NAME
    (48) expression -> . pointer
    (49) expression -> . and
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME
    (53) and -> . AND and
    (54) and -> . AND NAME
    (55) and -> . AND pointer

    LPAREN          shift and go to state 41
    MINUS           shift and go to state 42
    NUMBER          shift and go to state 40
    NAME            shift and go to state 43
    STAR            shift and go to state 9
    AND             shift and go to state 23

    pointer                        shift and go to state 44
    expression                     shift and go to state 60
    and                            shift and go to state 45

state 42

    (45) expression -> MINUS . expression
    (40) expression -> . expression PLUS expression
    (41) expression -> . expression MINUS expression
    (42) expression -> . expression STAR expression
    (43) expression -> . expression DIVIDE expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . MINUS expression
    (46) expression -> . NUMBER
    (47) expression -> . NAME
    (48) expression -> . pointer
    (49) expression -> . and
    (50) pointer -> . STAR pointer
    (51) pointer -> . STAR and
    (52) pointer -> . STAR NAME
    (53) and -> . AND and
    (54) and -> . AND NAME
    (55) and -> . AND pointer

    LPAREN          shift and go to state 41
    MINUS           shift and go to state 42
    NUMBER          shift and go to state 40
    NAME            shift and go to state 43
    STAR            shift and go to state 9
    AND             shift and go to state 23

    pointer                        shift and go to state 44
    expression                     shift and go to state 61
    and                            shift and go to state 45

state 43

    (47) expression -> NAME .

    PLUS            reduce using rule 47 (expression -> NAME .)
    MINUS           reduce using rule 47 (expression -> NAME .)
    STAR            reduce using rule 47 (expression -> NAME .)
    DIVIDE          reduce using rule 47 (expression -> NAME .)
    COMMA           reduce using rule 47 (expression -> NAME .)
    SEMI_COLON      reduce using rule 47 (expression -> NAME .)
    RPAREN          reduce using rule 47 (expression -> NAME .)


state 44

    (48) expression -> pointer .

    PLUS            reduce using rule 48 (expression -> pointer .)
    MINUS           reduce using rule 48 (expression -> pointer .)
    STAR            reduce using rule 48 (expression -> pointer .)
    DIVIDE          reduce using rule 48 (expression -> pointer .)
    COMMA           reduce using rule 48 (expression -> pointer .)
    SEMI_COLON      reduce using rule 48 (expression -> pointer .)
    RPAREN          reduce using rule 48 (expression -> pointer .)


state 45

    (49) expression -> and .

    PLUS            reduce using rule 49 (expression -> and .)
    MINUS           reduce using rule 49 (expression -> and .)
    STAR            reduce using rule 49 (expression -> and .)
    DIVIDE          reduce using rule 49 (expression -> and .)
    COMMA           reduce using rule 49 (expression -> and .)
    SEMI_COLON      reduce using rule 49 (expression -> and .)
    RPAREN          reduce using rule 49 (expression -> and .)


state 46
